[gd_scene load_steps=4 format=3 uid="uid://bfctobktxdei1"]

[ext_resource type="FontFile" uid="uid://cfnjahf3m3rll" path="res://assets/PixelOperator8.ttf" id="1_1i64n"]
[ext_resource type="Script" uid="uid://bshsjan8ns7ix" path="res://scenes/game_ui/game_ui.gd" id="1_najyh"]
[ext_resource type="Texture2D" uid="uid://bqsvtp127qkht" path="res://assets/SmallSpaceship.png" id="2_1i64n"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_najyh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ScoreVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MarginContainer/ScoreVBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_1i64n")
theme_override_font_sizes/font_size = 8
text = "Score: 000"

[node name="GameOverVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverLabel" type="Label" parent="MarginContainer/GameOverVBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_1i64n")
text = "Game Over"

[node name="LivesVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 2

[node name="Lives3" type="TextureRect" parent="MarginContainer/LivesVBoxContainer"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = ExtResource("2_1i64n")
expand_mode = 2
stretch_mode = 3

[node name="Lives2" type="TextureRect" parent="MarginContainer/LivesVBoxContainer"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = ExtResource("2_1i64n")
expand_mode = 2
stretch_mode = 3

[node name="Lives1" type="TextureRect" parent="MarginContainer/LivesVBoxContainer"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = ExtResource("2_1i64n")
expand_mode = 2
stretch_mode = 3
